<resources>
    <string name="app_name">ProjectBedu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Bedu Shop</string>
    <string name="product_title">Product Title</string>
    <string name="mail_placeholder">Correo electrónico</string>
    <string name="name_placeholder">Nombre completo</string>
    <string name="phone_placeholder">Teléfono</string>
    <string name="pw_placeholder">Contraseña</string>
    <string name="sesion">Iniciar Sesión</string>
    <string name="register_here">Regístrate aquí</string>
    <string name="register">Regístrate</string>
    <string name="register_now">Registrarme</string>
    <string name="add_to_cart">Agregar al carrito</string>
    <string name="new_title">Nuevo</string>
    <string name="description_title">Descripción</string>
    <string name="available">Disponible en tu domicilio</string>
    <string name="ship">Entrega mañana</string>
    <string name="peso_symbol">$</string>
    <string name="price">1000</string>
    <string name="product">Producto</string>
    <string name="products_near_to_you">Productos cerca de ti</string>
    <string name="bottom_nav">Navbar</string>
    <string name="home">Home</string>
    <string name="cart">Carrito</string>
    <string name="profile">Perfil</string>
    <string name="test_mail">test@test.com</string>
    <string name="my_directions">Mis direcciones</string>
    <string name="logout">Cerrar sesión</string>
    <string name="add_address">Agregar dirección</string>
    <string name="my_location">Ubicación Actual</string>
    <string name="update">Actualizar</string>
    <string name="pay">Proceder al pago</string>
</resources>