<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="164dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_shopping_bag" />
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:layout_marginBottom="60dp"
        />
    <EditText
        android:id="@+id/emailText"
        android:hint="@string/mail_placeholder"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="50dp"
        android:inputType="text"
        android:drawableLeft="@drawable/person"
        android:drawableTint="@color/white"
        android:drawablePadding="12dp"
        />
    <EditText
        android:id="@+id/passwordText"
        android:hint="@string/pw_placeholder"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="50dp"
        android:inputType="text"
        android:drawableLeft="@drawable/lock"
        android:drawableTint="@color/white"
        android:drawablePadding="12dp"
        />
    <Button
        android:id="@+id/btnLogin"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sesion"
        android:backgroundTint="@color/orange"/>
    <TextView
        android:id="@+id/textRegister"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:autoLink="web"
        />
</LinearLayout>